# GoLaunch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  website.yml
golaunch-cli/: Cargo.toml
golaunch-cli/src/: main.rs
golaunch-core/: Cargo.toml
golaunch-core/src/: db.rs  lib.rs  models.rs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  context.rs  lib.rs  main.rs
src-tauri/src/acp/: client.rs  manager.rs  mod.rs  registry.rs  types.rs
src/components/: AgentResponse.tsx  AgentSettings.tsx  AgentStatusIndicator.tsx  CategoryBar.tsx  CommandSuggestionPanel.tsx  ConversationHistory.tsx  ItemList.tsx  ItemRow.tsx  PermissionDialog.tsx  RewriteQuickActions.tsx  SearchBar.tsx  SlashCommandList.tsx  StatusBar.tsx
src/hooks/: useAcpAgent.ts  useLaunchContext.ts  useLauncher.ts
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/src/components/: AiIntegration.astro  CliShowcase.astro  DownloadCta.astro  FeatureCard.astro  Features.astro  Footer.astro  Hero.astro  Navbar.astro  TerminalBlock.astro  ThemeToggle.astro
website/src/layouts/: BaseLayout.astro
website/src/pages/: index.astro
website/src/styles/: global.css
