[package]
name = "golaunch-core"
version = "0.1.0"
edition = "2021"
description = "Core library for GoLaunch - shared database and models"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
