[package]
name = "golaunch-app"
version = "0.1.0"
edition = "2021"
description = "GoLaunch - AI-powered launcher"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
golaunch-core = { path = "../golaunch-core" }
open = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
